--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     margin:0;
     padding:0;
     font-family: sans-serif;
-    background: url(weed.jpeg);
+    background: url(plant.jpeg);
     background-size: cover;
 }
 .box{
@@ -36,4 +36,31 @@ outline: none;
 color: white;
 border-radius: 24px;
 transition:0.25px;
+}
+
+.box input[type="text"]:focus,.box input[type="password"]:focus{
+
+width:270px;
+border-color: #ffc400ec;
+
+}
+.box input[type="submit"]{
+
+
+    border: 0;
+background: none;
+display: block;
+margin: 20px auto;
+text-align: center;
+border:3px solid #ffc400ec;
+padding:14px 35px;
+outline: none;
+color: white;
+border-radius: 24px;
+transition:0.25px;
+cursor:pointer;
+    
+}
+.box input[type="submit"]:hover{
+    background: #ffc400ec;
 }
